Bug 437951 - Safe assert on Color Smudge brush
Summary: Safe assert on Color Smudge brush
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Mint (Ubuntu based) Linux
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
: 440655 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-01 12:02 UTC by Tiar
Modified: 2021-08-06 11:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2021-06-01 12:02:27 UTC
SUMMARY
I got a safe assert playing with color smudge + RGBA brushes on master.


STEPS I TOOK (roughly)
1. I imported Flow's bundle (1.0) from https://krita-artists.org/t/flows-mixer-concept-brushes-v1-1-work-in-progress-krita-5/24304
2. I played with their brush presets in the brush editor first, then selected Wet Bristles Rough, and then Wet Textured Soft. This is the preset the safe assert happened on.
3. In Brush Tip, I changed the brush tip to be the RGBA brush tip from the Flow's bundle (FTPainterly1).
4. In Patterns, I changed the pattern to the Flow's pattern: "TheFlow Canvas 01". Note: it's a huge pattern, 1024x1024, so all further actions will be terribly slow/freeze Krita due to bug 437950.
5. I either further tweaked the preset or started painting on the Scratchpad or the canvas.


OBSERVED RESULT
SAFE ASSERT (krita): "colorSmudgeData" in file /home/tymon/kritadev/krita/plugins/paintops/colorsmudge/KisColorSmudgeStrategyLightness.cpp, line 49


EXPECTED RESULT
No safe asserts.

SOFTWARE/OS VERSIONS
EXPECTED RESULT
All sliders are still fast and responsive.

SOFTWARE/OS VERSIONS

I'm not 100% sure which commit I was on when testing; but I don't think there was plenty of work done on color smudge brushes just around that time, so this commit should be as good as the one I really used.

Krita

 Version: 5.0.0-prealpha (git 626af155fb)
 Languages: pl, pl_PL, pl
 Hidpi: true

Qt

  Version (compiled): 5.12.8
  Version (loaded): 5.12.8

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.4.0-58-generic
  Pretty Productname: Linux Mint 20.1
  Product Type: linuxmint
  Product Version: 20.1
  Desktop: X-Cinnamon
Comment 1 Dmitry Kazakov 2021-08-03 08:21:31 UTC
Git commit e3901d5c76fd57c9ee6aa0a369d708111717b875 by Dmitry Kazakov.
Committed on 03/08/2021 at 08:21.
Pushed by dkazakov into branch 'master'.

Fix an assert in colorsmudge lightness mode

The Lightness brush mode and new-engine switch must be written
simultaneously, so that the colorsmudge brush would not be
started with incomplete configuration.

M  +25   -6    plugins/paintops/colorsmudge/kis_colorsmudgeop_settings_widget.cpp
M  +4    -0    plugins/paintops/colorsmudge/kis_colorsmudgeop_settings_widget.h

https://invent.kde.org/graphics/krita/commit/e3901d5c76fd57c9ee6aa0a369d708111717b875
Comment 2 Dmitry Kazakov 2021-08-06 11:00:09 UTC
*** Bug 440655 has been marked as a duplicate of this bug. ***