Fix an assert in colorsmudge lightness mode

The Lightness brush mode and new-engine switch must be written
simultaneously, so that the colorsmudge brush would not be
started with incomplete configuration.

BUG:437951